--- a/styles.css
+++ b/styles.css
@@ -6,25 +6,47 @@
 body {
     background: linear-gradient(45deg, rgb(64, 161, 161), rgb(78, 76, 226) );
     color: #fff;
+    display:flex;
+    flex-direction: column;
     font-family: Helvetica, sans-serif;
+    justify-content: center;
     min-height: 100vh;
     min-width: 100vw;
+    padding: 64px;
 } 
 
 h1 {
     font-size: 96px;
+    margin: 80px;
     text-align: center;
 }
 .gallery {
+    background: linear-gradient(60deg,
+     rgba(255, 255, 255, 0.103),
+     rgba(255, 255, 255, 0.5));
+    border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    list-style-type: none;
+    padding: 50px;
 }
-
 .thumbnail {
+    border: solid 3px rgba(255,255,255, 0.9);
+    border-radius: 15px;
+    box-shadow: 0 0 48px 2px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    margin: 32px;
     max-height: 200px;
-    max-height: 300px;
+    max-width: 300px;
+    overflow: hidden;
+    transform: scale(1);
+    transition: transform 0.3s;
 }
-.thumbanil img {
+.thumbnail:hover {
+    transform: scale(1.2);
+}
+.thumbnail img {
     height: 100%;
     width: 100%;
 }
