--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,14 @@ h1 {
     width: 100%;
 }
 
+.thumbnail img:focus,
+.thumbnail img:focus-visible {
+    border:solid 5px rgb(78, 76, 226);
+}
+
 .popup {
     align-content: center;
+    animation: fadeIn 0.3s;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
     display: flex;
@@ -72,6 +78,9 @@ h1 {
     display: none;
 }
 
+.popup.fade-out {
+    animation: fadeOut 0.3s both;
+}
 
 .popup__img {
     max-height: 80%;
@@ -119,4 +128,18 @@ h1 {
 
 .popup__arrow--right {
     right: 10%;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0;}
+
+    to { opacity: 1;}
+    
+}
+
+@keyframes fadeOut {
+    from { opacity: 1;}
+
+    to { opacity: 0;}
+    
 }
